--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Brutalarm"
         tools:targetApi="31">
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
+
+
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".AlarmReceiver"/> //##
+
     </application>
+
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/> //##
+
 
 </manifest>
